avoid the awkward shift to the right of the page when nav menu opens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,14 +22,14 @@ body {
     line-height: 1.5;
 }
 
-/*===================== UTILITY =====================*/
-
-.stop-scrolling {
-    height: 100%;
-    overflow: hidden;
-}
-
 /*===================== JS =====================*/
+
+body.js-no-scroll {
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+}
 
 .js-focus-visible :focus:not(.focus-visible) {
     outline: none;
